// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works with defaults 1`] = `
.c0 {
  font-family: Montserrat,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  color: black;
  line-height: 1.5;
  text-align: left;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

<div
  className="c0"
>
  Hello world!
</div>
`;

exports[`it works with fontFamily 1`] = `
.c0 {
  font-family: Consolas,Courier New,monospace;
  font-weight: 400;
  font-size: 1rem;
  color: black;
  line-height: 1.5;
  text-align: left;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

<div
  className="c0"
  fontFamily="mono"
>
  Hello world!
</div>
`;

exports[`it works with fontSize 1`] = `
.c0 {
  font-family: Montserrat,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  color: black;
  line-height: 1.5;
  text-align: left;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

<div
  className="c0"
  fontSize={3}
>
  Hello world!
</div>
`;

exports[`it works with fontWeight 1`] = `
.c0 {
  font-family: Montserrat,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  color: black;
  line-height: 1.5;
  text-align: left;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

<div
  className="c0"
  fontWeight="normal"
>
  Hello world!
</div>
`;

exports[`it works with letterSpacing 1`] = `
.c0 {
  font-family: Montserrat,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  color: black;
  line-height: 1.5;
  text-align: left;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

<div
  className="c0"
  letterSpacing="normal"
>
  Hello world!
</div>
`;

exports[`it works with lineHeight 1`] = `
.c0 {
  font-family: Montserrat,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  color: black;
  line-height: 1.5;
  text-align: left;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

<div
  className="c0"
>
  Hello world!
</div>
`;

exports[`it works with textAlign 1`] = `
.c0 {
  font-family: Montserrat,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  color: black;
  line-height: 1.5;
  text-align: left;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

<div
  className="c0"
>
  Hello world!
</div>
`;

exports[`it works with textColor 1`] = `
.c0 {
  font-family: Montserrat,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  color: white;
  line-height: 1.5;
  text-align: left;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

<div
  className="c0"
>
  Hello world!
</div>
`;
